--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ reqwasm = "0.5.0"
 scraper = "0.19.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.118"
+wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
-web-sys = { version = "0.3.69", features = ["HtmlDocument", "Window", "MediaQueryList", "HtmlElement", "Document"] }
+web-sys = { version = "0.3.69", features = ["HtmlDocument", "Window", "MediaQueryList", "HtmlElement", "Document", "WheelEvent", "CssStyleDeclaration"] }
 yew = { version = "0.21.0", features = ["csr"] }
 yew-hooks = "0.3.2"
 yew-router = "0.18.0"
